05c-lb-tg.tf
# ---------------------------------------------------------------------------------------------------
# version  1.10
# Library: https://github.com/Frankie116/my-library.git
# Creates target groups & attachments for load balancing
# ---------------------------------------------------------------------------------------------------

# req:
# 01a-vpc.tf            - module.my-vpc.vpc_id
# 09b-random-string.tf  - random_string.my-random-string.result
# 02a-ec2-snapshot.tf   - aws_instance.my-server[count.index].id
# variables.tf          - var.my-port-app1
# variables.tf          - var.my-hc-interval
# variables.tf          - var.my-project-name
# variables.tf          - var.my-environment


resource "aws_lb_target_group" "my-lb-tg" {
  name                  = "my-lb-tg-${random_string.my-random-string.result}"
  vpc_id                = module.my-vpc.vpc_id
  protocol              = "HTTP"
  port                  = var.my-port-app1
  # target_type         = "ip"
  health_check {
    healthy_threshold   = "3"
    interval            = var.my-hc-interval
    protocol            = "HTTP"
    matcher             = "200"
    timeout             = "3"
    path                = var.my-hc-path
    unhealthy_threshold = "2"
  }
  tags                  = {
    Name                = "my-lb-tg-${random_string.my-random-string.result}"
    Terraform           = "true"
    Project             = var.my-project-name
    Environment         = var.my-environment
  }
}

resource "aws_lb_target_group_attachment" "my-lb-attachment" {
  count                      = local.instance-count
  target_group_arn           = aws_lb_target_group.my-lb-tg.arn
  target_id                  = aws_instance.my-server[count.index].id
}
